fix: 修复 Sonar 编译错误与 S7467 匿名变量规范